Contribution by Manjunadh Reddy